# Terminal-MCP

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/context/: ARCHITECTURE.md  DEVELOPMENT.md  PATTERNS.md
.github/instructions/: server.instructions.md  session.instructions.md  terminal.instructions.md  tests.instructions.md  tools.instructions.md
.github/workflows/: audit.yml  ci.yml  release.yml
src/: ansi.rs  error_detection.rs  keys.rs  lib.rs  logging.rs  main.rs  output.rs  screenshot.rs  scrollback.rs  server.rs  shell_integration.rs  wsl.rs
src/session/: manager.rs  mod.rs  session.rs
src/terminal/: mod.rs  pty_driver.rs  vt_parser.rs
src/tools/: automation.rs  input.rs  introspection.rs  lifecycle.rs  mod.rs  observation.rs
tests/: e2e_automation.rs  e2e_edge_cases.rs  e2e_input.rs  e2e_lifecycle.rs  e2e_observation.rs  integration_test.rs
