[package]
name = "terminal-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "MCP server for interactive terminal session management"

[dependencies]
portable-pty = "0.9"
vt100 = "0.16"
rmcp = { version = "1.4.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
fontdue = "0.9"
tiny-skia = "0.12"
zstd = "0.13"
base64 = "0.22"
thiserror = "2"
dashmap = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
http = "1"

[[bin]]
name = "test-cli"
path = "src/bin/test_cli.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
