[package]
name = "terminal-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "MCP (Model Context Protocol) server for interactive terminal session management via PTY"
readme = "README.md"
repository = "https://github.com/adsamcik/Terminal-MCP"
homepage = "https://github.com/adsamcik/Terminal-MCP"
keywords = ["mcp", "terminal", "pty", "tui", "automation"]
categories = ["command-line-utilities", "development-tools"]
authors = ["adsamcik <adsamcik@users.noreply.github.com>"]
publish = false

[dependencies]
portable-pty = "0.9"
vt100 = "0.16"
rmcp = { version = "1.5.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
fontdue = "0.9"
tiny-skia = "0.12"
zstd = "0.13"
base64 = "0.22"
thiserror = "2"
dashmap = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
humantime = "2"

[[bin]]
name = "test-cli"
path = "src/bin/test_cli.rs"

[lints.clippy]
collapsible_if = "allow"
manual_is_multiple_of = "allow"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
